--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^14.0.0
   google_fonts: ^6.2.1
   persistent_bottom_nav_bar: ^5.0.2
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
