--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,17 @@ dependencies:
   bloc: ^8.1.4
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
+  device_preview: ^1.1.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  flutter_dotenv: ^5.1.0
   flutter_screenutil: ^5.9.0
   get_it: ^7.6.7
   go_router: ^14.0.0
   google_fonts: ^6.2.1
   persistent_bottom_nav_bar: ^5.0.2
-  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -52,5 +53,6 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
   #   - images/a_dot_ham.jpeg
