--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get_it: ^7.6.7
   go_router: ^14.0.0
   google_fonts: ^6.2.1
+  hydrated_bloc: ^9.1.5
+  path_provider: ^2.1.3
   persistent_bottom_nav_bar: ^5.0.2
   uuid: ^4.4.0
 
