--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dartz: ^0.10.1
   device_preview: ^1.1.0
   equatable: ^2.0.5
+  fade_shimmer: ^2.2.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
