--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   path_provider: ^2.1.3
   persistent_bottom_nav_bar: ^5.0.2
   uuid: ^4.4.0
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -60,3 +62,5 @@ flutter:
     - .env
     - assets/images/
   #   - images/a_dot_ham.jpeg
+flutter_intl:
+  enabled: true
