--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   device_preview: ^1.1.0
   equatable: ^2.0.5
   fade_shimmer: ^2.2.0
+  firebase_core: ^3.1.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_dotenv: ^5.1.0
+  flutter_localizations:
+    sdk: flutter
   flutter_screenutil: ^5.9.0
   get_it: ^7.6.7
   go_router: ^14.0.0
@@ -47,8 +50,6 @@ dependencies:
   path_provider: ^2.1.3
   persistent_bottom_nav_bar: ^5.0.2
   uuid: ^4.4.0
-  flutter_localizations:
-    sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^3.0.0
